--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <!-- Estilos Propios -->
+    <link rel="stylesheet" href="/css/syles.css" />
     <title>Rick and Morty</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <div>
-                
+        <nav class="navbar">
+            <div class="container">
+                <div class="logo"><img src="./images/logo.webp" alt="Logo" /></div>
+                <div>
+                <form>
+                    <label for="input-busqueda">
+                    <input type="text" placeholder="Buscar" id="input-busqueda" />
+                    </label>
+                    <label>
+                    <input type="submit" value="Buscar" />
+                    </label>
+                </form>
+                </div>
+                <ul>
+                <li><a href="">Favoritos</a></li>
+                <li><a href="">Contacto</a></li>
+                </ul>
             </div>
-            <div></div>
-            <div></div>
         </nav>
     </header>
-</body>
+  </body>
 </html>
