--- a/contacto.html
+++ b/contacto.html
@@ -53,22 +53,7 @@
         <div class="imagenfondo secciondos"></div>
       </div>
     </header>
-    <main class="main-index">
-      <section class="container seccion">
-        <h2>PERSONAJES</h2>
-        <div class="personajes"></div>
-        <button class="vermas">VER MÁS</button>
-      </section>
-      <section class="container seccion">
-        <h2>Episodios:</h2>
-        <div class="episodios"></div>
-        <button class="vermas">VER MÁS</button>
-      </section>
-      <section class="container seccion">
-        <h2>Locaciones:</h2>
-        <div class="locaciones"></div>
-        <button class="vermas">VER MÁS</button>
-      </section>
+    <main>
     </main>
     <footer>
       <div class="container footer">
@@ -78,7 +63,5 @@
         </p>
       </div>
     </footer>
-    <script src="https://kit.fontawesome.com/ef84cedd25.js" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
   </body>
 </html>
