--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -73,11 +75,12 @@
     <footer>
       <div class="container footer">
         <p>
-          Este sitio web fue hecho con mucho esfuerzo cariño. Espero que lo
+          Este sitio web fue hecho con mucho y esfuerzo cariño. Espero que lo
           disfruten :)
         </p>
       </div>
     </footer>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://kit.fontawesome.com/ef84cedd25.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
   </body>
