--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         <button class="vermas">VER MÁS</button>
       </section>
       <section class="container seccion">
-        <h2>Episodios:</h2>
+        <h2>EPISODIOS</h2>
         <div class="episodios"></div>
         <button class="vermas">VER MÁS</button>
       </section>
       <section class="container seccion">
-        <h2>Locaciones:</h2>
+        <h2>LOCACIONES</h2>
         <div class="locaciones"></div>
         <button class="vermas">VER MÁS</button>
       </section>
