Página favoritos generada

--- a/favoritos.html
+++ b/favoritos.html
@@ -61,6 +61,7 @@
         </p>
       </div>
     </footer>
+	<script src="https://kit.fontawesome.com/ef84cedd25.js" crossorigin="anonymous"></script>
 	<script src="favoritos.js"></script>
   </body>
 </html>
