--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
               <input
                 type="search"
                 name="Busqueda"
-                placeholder="Buscar"
+                placeholder="Buscar nombre"
                 id="input-busqueda"
               />
             </label>
