--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <nav class="navbar">
         <a href="index.html" class="logo"><img src="./images/logo.webp" alt="Logo" /></a>
         <div>
-          <form>
+          <form id="barraDeBusqueda">
             <label for="input-busqueda">
               <input
                 type="search"
                 name="Busqueda"
-                placeholder="Buscar"
+                placeholder="Buscar nombre"
                 id="input-busqueda"
               />
             </label>
@@ -40,7 +40,7 @@
           <a href="contacto.html">Contacto</a>
         </div>
       </nav>
-      <div class="presentacion">
+      <div class="presentacion" id="presentacion">
         <div class="seccionuno">
           <h1>MI WEB DE RICK AND MORTY</h1>
           <p>
