Modo oscuro a medias

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div class="fav-con">
           <a href="favoritos.html">Favoritos</a>
           <a href="contacto.html">Contacto</a>
+          <button id="modoBoton" class="botonClaro">Modo Oscuro</button>
         </div>
       </nav>
       <div class="presentacion" id="presentacion">
@@ -82,6 +83,7 @@
     </footer>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://kit.fontawesome.com/ef84cedd25.js" crossorigin="anonymous"></script>
+    <script src="funciones.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
